--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Alo mundo!</h1>
+  <h1>Alo mundo!!!</h1>
   <footer>Versão brasileira Herbert Rychardis</footer>
 </body>
 </html>
